{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 74,
  "lineage": "253a1314-e6c0-c072-c7a7-3c5e030de633",
  "resources": [
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:loadbalancer/app/alb-dev-cli/bfe6b0d49d67f5c2",
            "arn_suffix": "app/alb-dev-cli/bfe6b0d49d67f5c2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-dev-cli-1949914867.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:205908491149:loadbalancer/app/alb-dev-cli/bfe6b0d49d67f5c2",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-dev-cli",
            "security_groups": [
              "sg-0e8d410151557fdb6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0291df8fd4e46add5"
              },
              {
                "subnet_id": "subnet-05e9b16848b031b6d"
              }
            ],
            "subnets": [
              "subnet-0291df8fd4e46add5",
              "subnet-05e9b16848b031b6d"
            ],
            "vpc_id": "vpc-03e1413a777d1c54f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:listener/app/alb-dev-cli/bfe6b0d49d67f5c2/3b58f37b099dacd3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-c-b/e53efa19420198dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:205908491149:listener/app/alb-dev-cli/bfe6b0d49d67f5c2/3b58f37b099dacd3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:loadbalancer/app/alb-dev-cli/bfe6b0d49d67f5c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_client.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg",
            "module.target_group_client_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_server",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:loadbalancer/app/alb-dev-ser/5c19453566664533",
            "arn_suffix": "app/alb-dev-ser/5c19453566664533",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-dev-ser-1826327041.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:205908491149:loadbalancer/app/alb-dev-ser/5c19453566664533",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-dev-ser",
            "security_groups": [
              "sg-030c790514dd078b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0291df8fd4e46add5"
              },
              {
                "subnet_id": "subnet-05e9b16848b031b6d"
              }
            ],
            "subnets": [
              "subnet-0291df8fd4e46add5",
              "subnet-05e9b16848b031b6d"
            ],
            "vpc_id": "vpc-03e1413a777d1c54f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_server.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_server",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:listener/app/alb-dev-ser/5c19453566664533/9ce768a32e4fa616",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-s-b/aa77c2cdb7477ab8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:205908491149:listener/app/alb-dev-ser/5c19453566664533/9ce768a32e4fa616",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:loadbalancer/app/alb-dev-ser/5c19453566664533",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_server.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_server.aws_security_group.sg",
            "module.target_group_server_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:route-table/rtb-09a58666e9509f25e",
            "default_route_table_id": "rtb-09a58666e9509f25e",
            "id": "rtb-09a58666e9509f25e",
            "owner_id": "205908491149",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d52d183a378d1cd8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt_dev"
            },
            "tags_all": {
              "Name": "public_rt_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e5d2e100a5c66f4",
            "domain": "vpc",
            "id": "eipalloc-09e5d2e100a5c66f4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-207-239-105.compute-1.amazonaws.com",
            "public_ip": "44.207.239.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-dev"
            },
            "tags_all": {
              "Name": "eip-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:internet-gateway/igw-0d52d183a378d1cd8",
            "id": "igw-0d52d183a378d1cd8",
            "owner_id": "205908491149",
            "tags": {
              "Name": "igw_dev"
            },
            "tags_all": {
              "Name": "igw_dev"
            },
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e5d2e100a5c66f4",
            "connectivity_type": "public",
            "id": "nat-0b84ab8130003cbe6",
            "network_interface_id": "eni-01e8fc7bd0def4718",
            "private_ip": "10.120.2.201",
            "public_ip": "44.207.239.105",
            "subnet_id": "subnet-05e9b16848b031b6d",
            "tags": {
              "Name": "nat_dev"
            },
            "tags_all": {
              "Name": "nat_dev"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:route-table/rtb-0ea1839a31725cd5d",
            "id": "rtb-0ea1839a31725cd5d",
            "owner_id": "205908491149",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b84ab8130003cbe6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_dev"
            },
            "tags_all": {
              "Name": "private_rt_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d526e8fbfa931db",
            "route_table_id": "rtb-0ea1839a31725cd5d",
            "subnet_id": "subnet-0dceca8438e3c6916"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bf9e91c7ec9eea3",
            "route_table_id": "rtb-0ea1839a31725cd5d",
            "subnet_id": "subnet-066d5d0f74828ebd5"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6f857f67dddb242",
            "route_table_id": "rtb-0ea1839a31725cd5d",
            "subnet_id": "subnet-0700526fe4669c280"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0636e58ba48fca2a8",
            "route_table_id": "rtb-0ea1839a31725cd5d",
            "subnet_id": "subnet-0e4597127244b5952"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b91407169078f610",
            "route_table_id": "rtb-09a58666e9509f25e",
            "subnet_id": "subnet-05e9b16848b031b6d"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010a9dfd31925d8fb",
            "route_table_id": "rtb-09a58666e9509f25e",
            "subnet_id": "subnet-0291df8fd4e46add5"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:subnet/subnet-0dceca8438e3c6916",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.120.6.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dceca8438e3c6916",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "205908491149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_0_dev"
            },
            "tags_all": {
              "Name": "private_subnet_client_0_dev"
            },
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:subnet/subnet-066d5d0f74828ebd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.8.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066d5d0f74828ebd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "205908491149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_1_dev"
            },
            "tags_all": {
              "Name": "private_subnet_client_1_dev"
            },
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:subnet/subnet-0700526fe4669c280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.120.10.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0700526fe4669c280",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "205908491149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_0_dev"
            },
            "tags_all": {
              "Name": "private_subnet_server_0_dev"
            },
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:subnet/subnet-0e4597127244b5952",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.12.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4597127244b5952",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "205908491149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_1_dev"
            },
            "tags_all": {
              "Name": "private_subnet_server_1_dev"
            },
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:subnet/subnet-05e9b16848b031b6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.120.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e9b16848b031b6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "205908491149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0_dev"
            },
            "tags_all": {
              "Name": "public_subnet_0_dev"
            },
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:subnet/subnet-0291df8fd4e46add5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.4.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0291df8fd4e46add5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "205908491149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1_dev"
            },
            "tags_all": {
              "Name": "public_subnet_1_dev"
            },
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:vpc/vpc-03e1413a777d1c54f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0f2671a871be9f8e8",
            "default_route_table_id": "rtb-09a58666e9509f25e",
            "default_security_group_id": "sg-0b5f97adb73e5f604",
            "dhcp_options_id": "dopt-1178526b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03e1413a777d1c54f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a58666e9509f25e",
            "owner_id": "205908491149",
            "tags": {
              "Name": "vpc_dev"
            },
            "tags_all": {
              "Name": "vpc_dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:security-group/sg-0e8d410151557fdb6",
            "description": "Controls access to the client ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8d410151557fdb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-dev-client",
            "name_prefix": "",
            "owner_id": "205908491149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-dev-client"
            },
            "tags_all": {
              "Name": "alb-dev-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:security-group/sg-030c790514dd078b2",
            "description": "Controls access to the server ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030c790514dd078b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-dev-server",
            "name_prefix": "",
            "owner_id": "205908491149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-dev-server"
            },
            "tags_all": {
              "Name": "alb-dev-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:security-group/sg-0d40e42639761a8aa",
            "description": "Controls access to the client ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d40e42639761a8aa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8d410151557fdb6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-task-dev-client",
            "name_prefix": "",
            "owner_id": "205908491149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-dev-client"
            },
            "tags_all": {
              "Name": "ecs-task-dev-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205908491149:security-group/sg-09c5d0bc8778dafba",
            "description": "Controls access to the server ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c5d0bc8778dafba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030c790514dd078b2"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "ecs-task-dev-server",
            "name_prefix": "",
            "owner_id": "205908491149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-dev-server"
            },
            "tags_all": {
              "Name": "ecs-task-dev-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_server.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-c-b/e53efa19420198dc",
            "arn_suffix": "targetgroup/tg-dev-c-b/e53efa19420198dc",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-c-b/e53efa19420198dc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-c-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-c-g/a75e2d76b1267001",
            "arn_suffix": "targetgroup/tg-dev-c-g/a75e2d76b1267001",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-c-g/a75e2d76b1267001",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-c-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_server_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-s-b/aa77c2cdb7477ab8",
            "arn_suffix": "targetgroup/tg-dev-s-b/aa77c2cdb7477ab8",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/status",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-s-b/aa77c2cdb7477ab8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-s-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_server_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-s-g/77b80c793fd3b11b",
            "arn_suffix": "targetgroup/tg-dev-s-g/77b80c793fd3b11b",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/status",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:205908491149:targetgroup/tg-dev-s-g/77b80c793fd3b11b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-s-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03e1413a777d1c54f"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}